--- a/lib/capistrano/deployment_status/view.html.erb
+++ b/lib/capistrano/deployment_status/view.html.erb
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= application %> Status</title>
+  <title><%= application %> Deployment Status</title>
+  <style type="text/css">
+    body {
+      font-family: helvetica, sans-serif;
+    }
+  </style>
 </head>
 <body>
 
